[CSS Regions] ASSERT when hovering over region https://bugs.webkit.org/show_bug.cgi?id=128809

Reviewed by Mihnea Ovidenie.

Source/WebCore:
There's no point in hit-testing a box for a region if it's not contained inside
that region.

Test: fast/regions/hit-test-box-non-containing-region.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::nodeAtPoint):

LayoutTests:
Add a test verifying we're not trying to hit-test a box inside a region
where it's not contained.

* fast/regions/hit-test-box-non-containing-region-expected.txt: Added.
* fast/regions/hit-test-box-non-containing-region.html: Added.


Canonical link: https://commits.webkit.org/150579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168263 268f45cc-cd09-0410-ab3c-d52691b4dbfc